--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,26 @@
   font-style: normal;
 }
 
+img {
+  user-select: none;
+}
+
+.main-screen {
+  display: flex;
+  height: 100vh;
+}
+
+
+::selection {
+  background-color: #AC8F32; 
+  color: white; 
+}
+
+::-moz-selection {
+  background-color: #AC8F32;
+  color: white;
+}
+
 :root {
   font-family: "Soledago", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -40,6 +60,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 a {
   font-weight: 500;
@@ -64,26 +85,6 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -95,7 +96,9 @@ button:focus-visible {
     color: #747bff;
   }
 
-  button {
-    background-color: #f9f9f9;
-  }
+
 }
+
+
+
+
